update interface. add backspace

--- a/test/_example.html
+++ b/test/_example.html
@@ -42,7 +42,7 @@
               el.addEventListener('keypress', function (evt) {
                 console.log(evt);
               });
-              fakey.seq(el, 'I type anything I want');
+              fakey.str(el, 'I type anything I want');
             });
         </script>
     </body>
