Browser support fixes

--- a/test/_example.html
+++ b/test/_example.html
@@ -31,8 +31,8 @@
               urlArgs: "bust=" + (new Date()).getTime(),
               baseUrl: '../dist',
               paths: {
-                'mocha'     : rootDir + '/node_modules/mocha/mocha',
-                'chai'      : rootDir + '/node_modules/chai/chai'
+                'proclaim' : rootDir + '/node_modules/proclaim/lib/proclaim',
+                'mocha'    : rootDir + '/node_modules/mocha/mocha'
               }
             });
 
