--- a/test/_runner.html
+++ b/test/_runner.html
@@ -31,8 +31,8 @@
               urlArgs: "bust=" + (new Date()).getTime(),
               baseUrl: '../src',
               paths: {
-                'mocha'     : rootDir + '/node_modules/mocha/mocha',
-                'chai'      : rootDir + '/node_modules/chai/chai'
+                'proclaim' : rootDir + '/node_modules/proclaim/lib/proclaim',
+                'mocha'     : rootDir + '/node_modules/mocha/mocha'
               }
             });
 
